--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite_react_shadcn_ts",
+  "homepage": "https://0xp3.github.io/AFJPHedera/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
